crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '    08:00:2b:01:02:03:04:05     '::macaddr8;"
---
SelectStmt@0..52
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..51
    TypeCast@7..51
      AConst@7..41
        Sconst@7..41 "'    08:00:2b:01:02:0 ..."
      Typecast@41..43 "::"
      TypeName@43..51
        Ident@43..51 "macaddr8"
  Ascii59@51..52 ";"

