crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '    08:00:2b:01:02:03:04:05'::macaddr8;"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..46
    TypeCast@7..46
      AConst@7..36
        Sconst@7..36 "'    08:00:2b:01:02:0 ..."
      Typecast@36..38 "::"
      TypeName@38..46
        Ident@38..46 "macaddr8"
  Ascii59@46..47 ";"

