crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@66.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT  b | '01:02:03:04:05:06' FROM macaddr8_data;"
---
SelectStmt@0..51
  Select@0..6 "SELECT"
  Whitespace@6..8 "  "
  ResTarget@8..31
    AExpr@8..31
      ColumnRef@8..9
        Ident@8..9 "b"
      Whitespace@9..10 " "
      Op@10..11 "|"
      Whitespace@11..12 " "
      AConst@12..31
        Sconst@12..31 "'01:02:03:04:05:06'"
  Whitespace@31..32 " "
  From@32..36 "FROM"
  Whitespace@36..37 " "
  RangeVar@37..50
    Ident@37..50 "macaddr8_data"
  Ascii59@50..51 ";"

