crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@7.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '123    08:00:2b:01:02:03'::macaddr8;"
---
SelectStmt@0..44
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..43
    TypeCast@7..43
      AConst@7..33
        Sconst@7..33 "'123    08:00:2b:01:0 ..."
      Typecast@33..35 "::"
      TypeName@35..43
        Ident@35..43 "macaddr8"
  Ascii59@43..44 ";"

