crates/pg_syntax/tests/snapshots/postgres_regress/macaddr@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX macaddr_data_btree ON macaddr_data USING btree (b);
---
IndexStmt@0..64
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..31 "macaddr_data_btree"
  Whitespace@31..32 " "
  On@32..34 "ON"
  Whitespace@34..35 " "
  RangeVar@35..47
    Ident@35..47 "macaddr_data"
  Whitespace@47..48 " "
  Using@48..53 "USING"
  Whitespace@53..54 " "
  Ident@54..59 "btree"
  Whitespace@59..60 " "
  Ascii40@60..61 "("
  IndexElem@61..62
    Ident@61..62 "b"
  Ascii41@62..63 ")"
  Ascii59@63..64 ";"

