crates/pg_syntax/tests/snapshots/postgres_regress/macaddr@18.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX macaddr_data_hash ON macaddr_data USING hash (b);
---
IndexStmt@0..62
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..30 "macaddr_data_hash"
  Whitespace@30..31 " "
  On@31..33 "ON"
  Whitespace@33..34 " "
  RangeVar@34..46
    Ident@34..46 "macaddr_data"
  Whitespace@46..47 " "
  Using@47..52 "USING"
  Whitespace@52..53 " "
  Ident@53..57 "hash"
  Whitespace@57..58 " "
  Ascii40@58..59 "("
  IndexElem@59..60
    Ident@59..60 "b"
  Ascii41@60..61 ")"
  Ascii59@61..62 ";"

